# cccy

./: .mise.toml  .pre-commit-hooks.yaml  .readthedocs.yaml  CLAUDE.md  README.md  Taskfile.yml  action.yml  architecture.md  mkdocs.yml  pyproject.toml  renovate.json  tox.ini  version_info.txt
.github/actions/auto-retry-failed-jobs/: README.md  action.yml
.github/workflows/: auto-retry-on-failure.yml  create_version_tag.yml  publish_python_package.yml  release.yml  test.yml  update-version.yml
docs/: examples.md  index.md  installation.md  requirements.txt  usage.md
docs/commands/: check.md  configuration.md  show-list.md  show-summary.md
src/cccy/: __init__.py  __main__.py  analyzer.py  cli.py  formatters.py  logging_config.py
src/cccy/application/interfaces/: __init__.py  calculators.py
src/cccy/application/services/: analysis_service.py  cli_facade_service.py
src/cccy/domain/entities/: complexity.py
src/cccy/domain/interfaces/: __init__.py  cli_services.py
src/cccy/domain/services/: complexity_analyzer.py
src/cccy/infrastructure/calculators/: concrete_calculators.py
src/cccy/infrastructure/config/: loaders.py
src/cccy/presentation/cli/: banner.py  common.py  helpers.py  main.py
src/cccy/presentation/factories/: __init__.py  service_factory.py
src/pycomplex/: __init__.py  analyzer.py  cli.py  cli_helpers.py  complexity_calculators.py  config.py  exceptions.py  formatters.py  models.py  services.py
tests/: __init__.py  test_analyzer.py  test_cli.py  test_cli_helpers.py  test_config.py  test_formatters.py  test_services.py
tests/fixtures/: simple.py
tests/presentation/cli/: test_main.py
